checkbox alignment issue fixed in filter section  and empty space trim in My account page

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_checkout.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_checkout.scss
@@ -1673,7 +1673,7 @@ h2.panel-defaultHeading {
         height: 107px;
     }
     .checkout-content.checkout-payment{
-        margin-bottom: 20px;
+        margin-bottom: 50px;
     }
 }
 @include media-breakpoint-down(sm) {
