--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
@@ -373,6 +373,8 @@
 									    top: 0;
 									    border-radius: $border-radius-small;
 									    border: 1px solid #b3b3b3;
+                                        margin: auto;
+                                        bottom: 0;
                                         @include media-breakpoint-down(sm) {
                                             left: 25px;
                                             display: none;
